delete old files

--- a/templates/app/views/ejs/site/index.html
+++ b/templates/app/views/ejs/site/index.html
@@ -21,7 +21,7 @@
 					<div class="form-group">
 						<input type="text" class="form-control input-lg" name="email" placeholder="Your Email">
 					</div>
-					<button type="submit" class="btn btn-lg btn-default">Subscribe</button>
+					<button type="submit" class="btn btn-lg btn-primary">Subscribe</button>
 				</form>
 				<p class="small text-muted">Powered by Mailchimp. Unsubscribe at any time.</p>
 			</div>
@@ -54,8 +54,6 @@
 		</div>
 	</section>
 	<!-- /Lead -->
-
-
 
 	<!-- Features -->
 	<section class="container space-before space-after">
