--- a/templates/app/views/ejs/site/login.html
+++ b/templates/app/views/ejs/site/login.html
@@ -24,7 +24,7 @@
                                         <input id="password" class="form-control input-lg" placeholder="Password" required="required" maxlength="60" type="password" name="password">
                                     </div>
                                     <div class="form-group">
-                                        <button type="submit" id="btn-signup" class="btn btn-block btn-primary btn-lg">Sign Up</button>
+                                        <button type="submit" id="btn-signup" class="btn btn-block btn-primary btn-lg">Sign In</button>
                                     </div>
                                 </form>
                             </div>
