--- a/templates/app/views/ejs/site/index.html
+++ b/templates/app/views/ejs/site/index.html
@@ -14,7 +14,7 @@
 					In the meantime, please register to our waiting list to get notified first once something is launched.</p>
 					<br>
 				
-				<form class="form-inline" role="form">
+				<form class="form-inline" role="form" method="post" action="/subscribe">
 					<div class="form-group">
 						<input type="text" class="form-control input-lg" name="name" placeholder="Your Name">
 					</div>
@@ -99,8 +99,9 @@
 		<div class="row">
 			<div class="col-md-5 col-md-push-1">
 				<h2>Need help?</h2>
-				<p>For help with this or another template you've downloaded from GetTemplate, please email me at gt@gettemplate.com. </p>
-				<p>If you'd like to report a bug or suggest an improvement, post an issue on <a href="https://github.com/gusnips/node-koa-mvc/issues">GitHub</a> 
+				<p>First of all, thanks for using <a href="#" target="_blank"><%=title%></a>! I'm glad it could of your use.</p>
+				<p>
+					If you'd like to report a bug or suggest an improvement, post an issue on <a href="https://github.com/gusnips/node-koa-mvc/issues">GitHub</a> 
 				</p>
 			</div>
 			<div class="col-md-5 col-md-push-1">
