--- a/templates/app/views/ejs/site/login.html
+++ b/templates/app/views/ejs/site/login.html
@@ -16,7 +16,7 @@
                             <div class="row">
                                 <form id="loginForm" method="post" action="/login">
                                     <div class="input-group">
-                                        <span class="input-group-addon"><i class="fa fa-envelope fa-2x"></i></span>
+                                        <span class="input-group-addon"><i class="fa fa-at-sign fa-2x"></i></span>
                                         <input id="email" class="form-control input-lg" placeholder="Email" required="required" maxlength="100" type="text" name="email" value="">
                                     </div>
                                     <div class="input-group">
@@ -50,7 +50,7 @@
                                 <div class="col-xs-12">
                                     <form id="signupForm" method="post" action="/register">
                                         <div class="input-group">
-                                            <span class="input-group-addon"><i class="fa fa-envelope fa-2x"></i></span>
+                                            <span class="input-group-addon"><i class="fa fa-at-sign fa-2x"></i></span>
                                             <input id="email" class="form-control input-lg" placeholder="Email" required="required" maxlength="100" type="text" name="email" value="">
                                         </div>
                                         <div class="input-group">
