--- a/templates/app/views/ejs/site/index.ejs
+++ b/templates/app/views/ejs/site/index.ejs
@@ -9,11 +9,13 @@
 					Pikachu diablo 3 asians angry birds final week varius le girlfriend in.
 					Feel Like a Sir panda blizzard hac mom nerd monday in on nyan cat.
 				</p>
-				
-				<p><%=title%> thing is currently in active development and will be released this summer.<br>
-					In the meantime, please register to our waiting list to get notified first once something is launched.</p>
-					<br>
-				
+
+				<p>
+					<%=title%> thing is currently in active development and will be released this summer.<br/>
+					In the meantime, please register to our waiting list to get notified first once something is launched.
+				</p>
+				<br/>
+
 				<form class="form-inline" role="form" method="post" action="/subscribe">
 					<div class="form-group">
 						<input type="text" class="form-control input-lg" name="name" placeholder="Your Name">
@@ -23,7 +25,7 @@
 					</div>
 					<button type="submit" class="btn btn-lg btn-primary">Subscribe</button>
 				</form>
-				<p class="small text-muted">Powered by Mailchimp. Unsubscribe at any time.</p>
+				<p class="small text-muted">Powered by {My Actual Mailer Here}. Unsubscribe at any time.</p>
 			</div>
 		</div>
 		<div class="row">
@@ -36,7 +38,7 @@
 	</div>
 </header>
 <!-- /Header -->
-	
+
 
 <!-- Content -->
 <main class="content">
@@ -47,9 +49,9 @@
 			<div class="col-sm-10 col-sm-push-1">
 				<h1 class="text-center">What it's all about</h1>
 				<p class="lead text-center">
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 					Nam mi odio, gravida at turpis et, porta bibendum justo.
-				</p> 
+				</p>
 			</div>
 		</div>
 	</section>
@@ -57,7 +59,7 @@
 
 	<!-- Features -->
 	<section class="container space-before space-after">
-		
+
 		<div class="row featurelist space-after">
 			<div class="col-md-5 col-sm-6 col-md-push-1 ">
 				<img class="img-feature img-responsive" src="http://www.gettemplate.com/demo/superawesome/assets/images/screen1.png" alt="Sample image">
@@ -74,10 +76,10 @@
 			</div>
 			<div class="col-md-5 col-sm-6 col-md-pull-4 col-sm-pull-6">
 				<h2 class="space-before">Yes, I love cool backgrounds, <span class="text-muted">like the one used here</span></h2>
-				<p>There are 2 more color themes inside this template. You'll just need to uncomment 
+				<p>There are 2 more color themes inside this template. You'll just need to uncomment
 					few lines in the CSS file to activate any of them. </p>
-				<p>Now, continue with our lipsum :) 
-					This is the ak-47 assault rifle, The preferred weapon of your enemy; and it makes a distinctive sound when 
+				<p>Now, continue with our lipsum :)
+					This is the ak-47 assault rifle, The preferred weapon of your enemy; and it makes a distinctive sound when
 					fired at you, so remember it. When a naked man's chasing a woman through an alley with a butcher knife and a hard-on, I figure he's not out collecting for the red cross. well, do you have anything to say for yourself? </p>
 			</div>
 		</div>
@@ -101,13 +103,13 @@
 				<h2>Need help?</h2>
 				<p>First of all, thanks for using <a href="#" target="_blank"><%=title%></a>! I'm glad it could of your use.</p>
 				<p>
-					If you'd like to report a bug or suggest an improvement, post an issue on <a href="https://github.com/gusnips/node-koa-mvc/issues">GitHub</a> 
+					If you'd like to report a bug or suggest an improvement, post an issue on <a href="https://github.com/gusnips/node-koa-mvc/issues">GitHub</a>
 				</p>
 			</div>
 			<div class="col-md-5 col-md-push-1">
 				<h2>Got your interest?</h2>
 				<p>Drop Us A Line!</p>
-				<form role="form" action="/contact" method="post"> 
+				<form role="form" action="/contact" method="post">
 				  	<div class="input-group">
 				  		<span class="input-group-addon"><i class="fa fa-comments"></i></span>
 				    	<input type="name" id="name" name="name" class="form-control" placeholder="Your name">
@@ -122,6 +124,6 @@
 				  	<button type="submit" class="btn btn-large btn-success">Submit!</button>
 				</form>
 			</div>
-		</div>	
+		</div>
 	</section>
 </footer>
